--- a/index.html
+++ b/index.html
@@ -390,10 +390,11 @@ You can check out the pages on this website to know more about me and my project
     <h2>Power Options</h2>
     <p>Hey there! I added this as a little easter egg. Thanks for messing around enough to find me! :)</p>
     <div class="horizontal">
-        <button onclick="togglePowerOptions(false); switchTemplate('template-credits')">View credits</button>
-        <button onclick="location.reload();">Reload website</button>
-        <button onclick="togglePowerOptions(false)">Close</button>
+        <button onclick="togglePowerOptions(false); switchTemplate('template-credits')">ⓘ View credits</button>
+        <button onclick="location.reload();"><i class="lni lni-refresh-circle-1-clockwise"></i> Reload website</button>
+        <button onclick="togglePowerOptions(false)"><i class="lni lni-xmark"></i> Close</button>
     </div>
+    <!-- <button onclick="togglePowerOptions(false)">Close</button> -->
   </div>
 </div>
 
