--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title">My Portfolio</span>
             <span></span>
             <span id="clock">20:00</span>
-            <span onclick="togglePowerOptions(true)">⏻</span>
+            <span onclick="togglePowerOptions(true)"><!--⏻--><i class="lni lni-power-button"></i></span>
         </div>
         <nav>
             <a data-target="template-me"><span class="active"><i class="lni lni-home-2"></i>Me</span></a>
