--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ You can check out the pages on this website to know more about me and my project
             <img src="projects/pycorrupt/clip2.webp" alt="GDI Effects Clip 2." style="width: 100%;">
             <img src="projects/pycorrupt/clip3.webp" alt="GDI Effects Clip 3." style="width: 100%;">
             <img src="projects/pycorrupt/clip4.webp" alt="GDI Effects Clip 4." style="width: 100%;">
+            <img src="projects/pycorrupt/result.png" alt="The result of the MBR's destruction." style="width: 100%;" data-caption="The result of the MBR's destruction.">
+            <div class="caption">
+                The result of the MBR's destruction.
+            </div>
         </div>
                         </div>
                     </div>
