--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Portfolio website</title>
+    <title>Raahim's portfolio website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="fonts/regular-icon-font-free/lineicons.css">
@@ -17,16 +17,16 @@
 
     <!-- Hello, World! -->
     <div class="wrapper">
-        <div class="topbar" class="buttons">
+        <div class="topbar">
             <span class="title">My Portfolio</span>
             <span></span>
             <span id="clock">20:00</span>
             <span onclick="togglePowerOptions(true)"><!--⏻--><i class="lni lni-power-button"></i></span>
         </div>
         <nav>
-            <a data-target="template-me"><span class="active"><i class="lni lni-home-2"></i>Me</span></a>
-            <a data-target="template-projects"><span><i class="lni lni-star-fat"></i>Featured Projects</span></a>
-            <a data-target="template-tools"><span><i class="lni lni-file-multiple"></i>Languages & Tools</span></a>
+            <a data-target="template-me" href="#me" role="button"><span class="active"><i class="lni lni-home-2"></i>Me</span></a>
+            <a data-target="template-projects" href="#projects" role="button"><span><i class="lni lni-star-fat"></i>Featured Projects</span></a>
+            <a data-target="template-tools" href="#tools" role="button"><span><i class="lni lni-file-multiple"></i>Languages & Tools</span></a>
         </nav>
         <div class="image"><img src="assets/image.png" width="250px" height="250px" data-caption="Jedi 'Master' Anakin Skywalker"></div>
         <div class="container">
