--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
 
+If you're here just for my projects, here they are:
+
+<div class="horizontal">
+    <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
+    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (EDUCATIONAL PURPOSES ONLY!)</button>
+</div>
+
                 </div>
 
             </div>
@@ -68,6 +75,11 @@ You can check out the pages on this website to know more about me and my project
 
 My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
+
+<div class="horizontal">
+    <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
+    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (EDUCATIONAL PURPOSES ONLY!)</button>
+</div>
 
                 </div>
             </div>
