--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
 
 My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
-
-If you're here just for my projects, here they are:
+<hr>But if you're here just for my projects, here they are:
 
 <div class="horizontal">
     <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
-    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (EDUCATIONAL PURPOSES ONLY!)</button>
+    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
 </div>
 
                 </div>
@@ -75,10 +74,11 @@ If you're here just for my projects, here they are:
 
 My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
+<hr>But if you're here just for my projects, here they are:
 
 <div class="horizontal">
     <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
-    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (EDUCATIONAL PURPOSES ONLY!)</button>
+    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
 </div>
 
                 </div>
