--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ You can check out the pages on this website to know more about me and my project
 
 <div class="horizontal">
     <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
-    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
+    <button onclick="switchTemplate('template-disclaimer')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
 </div>
 
                 </div>
@@ -78,7 +78,7 @@ You can check out the pages on this website to know more about me and my project
 
 <div class="horizontal">
     <button onclick="switchTemplate('template-project-forum')"><i class="lni lni-arrow-right"></i>Social Media</button>
-    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
+    <button onclick="switchTemplate('template-disclaimer')"><i class="lni lni-arrow-right"></i>Malware (educational purposes only!)</button>
 </div>
 
                 </div>
@@ -137,7 +137,7 @@ You can check out the pages on this website to know more about me and my project
         <h3>GDI Malware:</h3><hr>
         <p>Inspired by YouTube classics like Solaris.exe and Sulfoxide.exe. I've made versions of my own using only Python by utilizing Windows API functionality (such as the Graphics Device Interface) to produce colorful and stroke-inducing visuals coupled with a deadly payload that can brick any hard drive's MBR.<p><small>(DISCLAIMER! Just for educational purposes!)</small></p></p>
 
-                    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Read more</button>
+                    <button onclick="switchTemplate('template-disclaimer')"><i class="lni lni-arrow-right"></i>Read more</button>
                     </div>
                 </div>
               </div>
@@ -398,6 +398,33 @@ You can check out the pages on this website to know more about me and my project
         </div>
                         </div>
                     </div>
+                </div>
+            </div>
+</div>
+
+<div id="template-disclaimer" class="template" style="display: none;">
+            <div class="title">
+                <span style="display: flex; align-items: center; gap: 5px;"><i class="lni lni-file-pencil"></i>README.md</span>
+                <span style="display: flex; gap: 10px" class="buttons">
+                    <span>–</span>
+                    <span>▢</span>
+                    <span>⨉</span>
+                </span>
+            </div>
+            <div class="main">
+                <!-- Hello, World! -->
+                <div class="formatted">
+<h2>Security & Responsible Disclosure</h2><hr>
+
+The following page does not include any destructive or executable malware code. The "PyCorrupt" project is a research demonstration; implementation details that could enable destructive operations are intentionally omitted.
+<br><br>
+If you are an academic reviewer or admissions officer and require additional technical artifacts for evaluation, please contact me at <a href="mailto:raa512@protonmail.com">raa512@protonmail.com</a> and I can provide controlled access.
+<br><br>
+Please acknowledge this and click on the button to continue:
+<div class="horizontal">
+    <button onclick="switchTemplate('template-project-malware')"><i class="lni lni-arrow-right"></i>Continue to malware project</button>
+</div>
+
                 </div>
             </div>
 </div>
