--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="formatted">
 <h1>Hi there 👋</h1><hr>
 
-My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
+My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
 <hr>But if you're here just for my projects, here they are:
 
@@ -72,7 +72,7 @@ You can check out the pages on this website to know more about me and my project
                 <div class="formatted">
 <h1>Hi there 👋</h1><hr>
 
-My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm Currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
+My name's Raahim. I'm a self taught developer and OS enthusiast with a passion for everything CompSci. I'm currently diving deep into Windows internals, virtualization and cybersecurity.<br><br>
 You can check out the pages on this website to know more about me and my projects!
 <hr>But if you're here just for my projects, here they are:
 
