--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a data-target="template-projects" href="#projects" role="button"><span><i class="lni lni-star-fat"></i>Featured Projects</span></a>
             <a data-target="template-tools" href="#tools" role="button"><span><i class="lni lni-file-multiple"></i>Languages & Tools</span></a>
         </nav>
-        <div class="image"><img src="assets/image.png" width="250px" height="250px" data-caption="Jedi 'Master' Anakin Skywalker"></div>
+        <div class="image"><img src="assets/image.png" width="250px" height="250px" data-caption="Hey that's me!"></div>
         <div class="container">
             <div class="title">
                 <span style="display: flex; align-items: center; gap: 5px;"><i class="lni lni-file-pencil"></i>README.md</span>
